--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0"
   }
