--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "cron": "^1.8.2",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
-    "markdown-table": "^2.0.0"
+    "markdown-table": "^2.0.0",
+    "moment": "^2.29.1",
+    "node-cron": "^2.0.3"
   }
 }
