--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "markdown-table": "^2.0.0",
     "moment": "^2.29.1",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "pg": "^8.5.1"
   }
 }
